# syncBackup

./: CMakeLists.txt  README.md  about.cpp  about.h  backend.cpp  backend.h  dr_standarditemmodel.cpp  dr_standarditemmodel.h  global.h  main.cpp  mainwindow.cpp  mainwindow.h  qml.qrc  syncbackup_en.ts  syncbackup_es.ts
darhon.tools/: CMakeLists.txt  dr_standarditemmodel.h
dr_tools/: dr_standarditemmodel.cpp
html/: excinchelp.html  help.html
pkg-info/: com.darhon.syncbackup.desktop  com.darhon.syncbackup.metainfo.xml
qml/: AboutDialog.qml  CommandlineDialog.qml  ExcIncHelpDialog.qml  HelpDialog.qml  SSHDialog.qml  initpage.qml  main.qml  mainwindow.qml  settings.qml
